fixed broken css

--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ html, body {
 
 canvas{
 	margin:50px;
-	border:2px solid black
+	border:2px solid black;
 }
